2004-05-18 [christoph]

	* src/maildir.c
	* src/maildir_gtk.c
		implement new folder creation

2004-05-07 [christoph]

	* src/maildir.c
		fix segfault when adding mails to a maildir folder

2004-05-05 [christoph]

	* src/maildir.c
		fix rebuilding of folder tree

2004-05-02 [christoph]

	* src/maildir.c
		fix searching for messages when the file nas been renamed

2004-05-01 [christoph]

	* src/maildir.c
		o search in new and cur directories when scanning the folder
		  or searching for a message
		o rename files on flag changes

2004-04-28 [christoph]

	* configure.ac
	* src/plugin.c
	* src/plugin_gtk.c
		add/update version checks

	Release Maildir Plugin 0.4

2004-04-28 [christoph]

	* src/maildir.c
		o add microseconds to unique part of Maildir filenames
		o replace all "/" with G_DIR_SEPARATOR

2004-04-27 [christoph]

	* src/Makefile.am
	* src/maildir_gtk.[ch]				** NEW **
	* src/plugin_gtk.c
		add FolderView popup menu

	* src/maildir.c
		set a path for Inbox because the folder indentifier functions
		don't work correctly without a path

2004-04-26 [christoph]

	* src/maildir.c
		fix removing of messages

2004-04-26 [christoph]

	* src/maildir.c
		implement add, copy and remove functions for Maildir

2004-04-26 [christoph]

	* src/uiddb.c
		fix memory leak in uiddb_insert_entry()

	* src/maildir.c
		fix crash then info part in filenames is missing

2004-04-25 [christoph]

	* src/Makefile.am
	* src/maildir.c
	* src/plugin.c
	* src/uiddb.[ch]				** NEW **
		restructure uid management
		(old sylpheed_uid.db files in Maildir folders have to be
		 removed, because the content is no longer valid)

2004-01-13 [christoph]

	* src/maildir.c
		update maildir FolderClass

2004-01-12 [christoph]

	* src/maildir.c
		ignore folders without cur directory

2004-01-01 [christoph]

	* src/maildir.c
		fix building of folder's GNode

	* src/maildir.c
		unregister FolderClass when unloading

2003-12-03 [christoph]

	* src/maildir.c