@@ -1,1 +1,9 @@
+Maintainers
+-----------
+
 Christoph Hohmann <reboot@gmx.ch>
+
+Contributors
+------------
+
+Klaus Flittner <klaus_flittner@gmx.de>
